Remember User locked rotation

* Save when the toggle state changes, as that's
 only time the value changes.
* implement reverse lock.

BUG=695281, 683456
TEST=manual, covered by unit test

Review-Url: https://codereview.chromium.org/2773013003
Cr-Commit-Position: refs/heads/master@{#459502}

Former-commit-id: 28bd8173b80ae1fe5e22875580051664cd97363d