ash/system/chromeos/rotation/tray_rotation_lock_unittest.cc
@@ -252,6 +252,8 @@ TEST_F(TrayRotationLockTest, InternalDisplayNotAvailableAtCreation) {
   Shell::Get()->maximize_mode_controller()->EnableMaximizeModeWindowManager(
       true);
   EXPECT_TRUE(default_view->visible());
+  Shell::Get()->maximize_mode_controller()->EnableMaximizeModeWindowManager(
+      false);
 }
 
 // Tests that when the tray view is deleted, while TrayRotationLock has not been
